--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ main {
     align-items: center;
     justify-content: space-evenly;
     border-radius: 20px;
-    box-shadow: 0 0 10px #11644d;
+    box-shadow: 0 0 10px black;
 }
 
 .title {
