--- a/style.css
+++ b/style.css
@@ -47,3 +47,33 @@ main {
     text-align: center;
 }
 
+.input label {
+    font: bold 1.5rem serif;
+}
+
+button {
+    width: 300px;
+    height: 40px;
+    font: bold 1.2rem serif;
+    background: #000;
+    color: rgb(255, 198, 0);
+    outline: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.result{
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    width: 300px;
+    height: 150px;
+    border-radius: 5px;
+    font: italic 1.5rem serif;
+    box-shadow: 0px 0px 10px black;
+    background: #000;
+    color: rgb(255, 198, 0);
+    padding: 20px;
+    box-sizing: border-box;
+    user-select: none;
+}
